--- a/css/styles.css
+++ b/css/styles.css
@@ -24,14 +24,14 @@ button {
         letter-spacing: 0.04em;
         text-transform: uppercase;
         color: #fff;
-        box-shadow: inset 0 0 12px 0 rgba(0, 0, 0, 0.05);
+        /* box-shadow: inset 0 0 12px 0 rgba(0, 0, 0, 0.05); */
             background-color: #4d5ae5;
 
 }
 
 .button:hover,
 .button:focus {
-    box-shadow: inset 0 0 12px 0 rgba(0, 0, 0, 0.05);
+    /* box-shadow: inset 0 0 12px 0 rgba(0, 0, 0, 0.05); */
         background-color: #404bbf;
 }
 
@@ -183,6 +183,10 @@ text-align: center;
 letter-spacing: 0.02em;
 text-transform: capitalize;
 color: #2e2f42;
+}
+
+.portfolio-item-title {
+    text-transform: capitalize;
 }
 
 .portfolio-list {}
