--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,7 @@ font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    text-transform: capitalize;
 }
 
 .text {
