--- a/css/styles.css
+++ b/css/styles.css
@@ -19,20 +19,6 @@ ol {
 
 button {
     cursor: pointer;
-    font-weight: 700;
-        font-size: 16px;
-        letter-spacing: 0.04em;
-        text-transform: uppercase;
-        color: #fff;
-        /* box-shadow: inset 0 0 12px 0 rgba(0, 0, 0, 0.05); */
-            background-color: #4d5ae5;
-
-}
-
-.button:hover,
-.button:focus {
-    /* box-shadow: inset 0 0 12px 0 rgba(0, 0, 0, 0.05); */
-        background-color: #404bbf;
 }
 
 .title {
@@ -64,7 +50,7 @@ font-weight: 500;
         text-align: center;
         color: #434455;
 }
-/* #region header */
+/* #region ======HEADER====== */
 .header {}
 
 .header-nav {}
@@ -134,21 +120,19 @@ font-style: normal;
 }
 
 .hero-btn {
-    /* border-radius: 4px;
-        padding: 16px 32px;
-        width: 169px;
-        height: 56px;
-        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);*/
             background-color: #4d5ae5;
+            color: #fff;
             font-weight: 500;
             line-height: 1.5;
+            font-size: 16px;
+            letter-spacing: 0.04em;
+            text-transform: uppercase;
 }
 
 .hero-btn:hover,
 .hero-btn:focus {
     background-color: #404BBF;
 }
-
 /* #endregion HERO */
 
 /* #region ========FEATURES======== */
@@ -169,7 +153,7 @@ font-style: normal;
     background-color: #FFFFFF;
 }
 
-.team h3 {
+.team-item-title {
     text-transform: capitalize;
 }
 /* #endregion TEAM */
